--- a/views/index.html
+++ b/views/index.html
@@ -3,23 +3,24 @@
 
   <head>
     <title>コロコン</title>
+    <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/app.css">
     <script type="text/javascript" src="../js/app.js"></script>
   </head>
 
-  <body class="bb">
+  <body class="bb bg-default">
     <!-- header -->
-    <header>
-      <div class="fl">
-        <p class="">コロコン</p>
-        <p class="">colopl convenient</p>
+    <header class="bg-primary text-white bb">
+      <div class="title pd5_10 wh100 bb">
+        <p class="fs_large">コロコン</p>
+        <p class="">~ colopl convenient ~</p>
       </div>
-      <div class="fr">
-        <div id="user_info">
-          <div class="email">email</div>
-          <div id="logout">ログアウト</div>
+      <div class="pd5_10 wh100 bb">
+        <div id="post_message" class="fr fs_small talign_center bg-white">ご意見Box</div>
+        <div id="user_info" class="fr">
+          <div class="email talign_right">email@email.com</div>
+          <div id="logout" class="fr fs_small talign_center bg-white">ログアウト</div>
         </div>
-        <div id="post_message">ご意見Box</div>
       </div>
     </header>
 
