--- a/css/app.css
+++ b/css/app.css
@@ -1,11 +1,37 @@
 /* util part css */
 
+.fl { float: left; }
+.fr { float: right; }
 .bb { box-sizing: border-box; }
 .w100 { width: 100%; }
 .h100 { height: 100%; }
 .wh100 { width: 100%; height: 100%; }
 
+.talign_right { text-align: right; }
+.talign_center { text-align: center; }
+
 /* end util part css */
+
+
+
+/* color */
+
+.bg-primary { background: #91ce83; }
+.bg-default { background: #eaf4e5; }
+.bg-white { background: #fafafa; }
+
+.text-white { color: #efe; }
+
+/* end color */
+
+
+
+/* font */
+
+.fs_small { font-size: 12px;}
+.fs_large { font-size: 25px; }
+
+/* end font */
 
 
 
@@ -45,4 +71,40 @@ footer {
 
 
 
-/*  */
+/* header */
+
+header .pd5_10 { padding: 5px 5px 5px 10px; }
+
+header > .title {
+  position: absolute;
+}
+
+#post_message {
+  width: 40px;
+  height: 40px;
+  line-height: 20px;
+  color: #424;
+  font-size: 12px;
+}
+
+#user_info {
+  margin: 0 10px;
+  width: 400px;
+  height: 100%;
+}
+
+#user_info > .email {
+  width: 100%;
+  height: 23px;
+  line-height: 23px;
+}
+
+#logout {
+  width: 70px;
+  height: 15px;
+  line-height: 15px;
+  font-size: 12px;
+  color: #aaa;
+}
+
+/* end header */
